fix typos in RAT module M, fix makefile

--- a/tex/modules/5-M/readiness/test.tex
+++ b/tex/modules/5-M/readiness/test.tex
@@ -100,7 +100,7 @@ Compute $(f \circ g)(2)$.
 \item If $T(\vec{v})=T(\vec{w})$ for some $\vec{v}, \vec{w} \in \IR^n$, then $\vec{v}=\vec{w}$.
 \item $T$ has a non-trivial kernel %Correct
 \item The columns of $A$ are linearly independent
-\item $\RREF(A)$ has only pivot columns
+\item $\RREF(A)$ has a pivot in every column
 \end{readinessAssuranceTestChoices}
 
 
@@ -110,7 +110,7 @@ Compute $(f \circ g)(2)$.
 \item $\RREF(A)$ has a pivot in every row
 \item $\Im T = \IR^m$
 \item The columns of $A$ span $\IR^m$
-\item $\RREF(A)$ has has a pivot in every column %Correct
+\item $\RREF(A)$ has a pivot in every column %Correct
 \end{readinessAssuranceTestChoices}
 
 
